update funtion user , view property
