# BackendAPI/WebAPI/WebAPI/Controllers/AccountController.cs
@@ -1,4 +1,6 @@
-﻿using Microsoft.AspNetCore.Http;
+﻿using AutoMapper;
+using Microsoft.AspNetCore.Authorization;
+using Microsoft.AspNetCore.Http;
 using Microsoft.AspNetCore.Mvc;
 using Microsoft.IdentityModel.Tokens;
 using System.IdentityModel.Tokens.Jwt;
@@ -18,11 +20,13 @@ namespace WebAPI.Controllers
     {
         private readonly IUnitOfWork uow;
         private readonly IConfiguration configuration;
+        private readonly IMapper mapper;
 
-        public AccountController(IUnitOfWork uow , IConfiguration configuration)
+        public AccountController(IUnitOfWork uow , IConfiguration configuration , IMapper mapper)
         {
             this.uow = uow;
             this.configuration = configuration;
+            this.mapper = mapper;
         }
         [HttpPost("Login")]
         public async Task<IActionResult> Login( LoginReqDto loginReqDto)
@@ -42,6 +46,26 @@ namespace WebAPI.Controllers
             loginRes.Token = CreateJWT(user);
                 return Ok(loginRes);
         }
+
+        [HttpPatch("ResetPassword")]
+        [Authorize] 
+        public async Task<IActionResult> ResetPassword(FormResetDto formReset)
+        {
+            var user= await uow.UsersRepository.authenticate(formReset.Name, formReset.oldPassword);
+            ApiError apiError = new ApiError();
+            if (user == null)
+            {
+                apiError.ErrorCode = Unauthorized().StatusCode;
+                apiError.ErrorMessage = "Invalid user name or password!!";
+                apiError.ErrorDetails = "This error appear when provided name id or password dose not exist";
+                return Unauthorized(apiError);
+            }
+                 uow.UsersRepository.ResetPassword(user, formReset.newPassword);
+                 await uow.SaveAsync();
+                 return NoContent();
+        }
+
+
 
         [HttpPost("Register")]
         public async Task<IActionResult> Register(LoginReqDto loginReqDto)
@@ -91,6 +115,39 @@ namespace WebAPI.Controllers
             return tokenHandler.WriteToken(token);
 
         }
+
+        [HttpGet("ListAccount")]
+        [Authorize]
+        public async Task<IActionResult> ListAccount()
+        {
+            var account = await uow.UsersRepository.ListAccount();
+
+            var accountDto = mapper.Map<IEnumerable<UserDto>>(account);
+            return Ok(accountDto);
+        }
+        [HttpDelete("DeleteAccount")]
+        [Authorize]
+        public async Task<IActionResult> DeleteAccount(string name, string nameToDelete)
+        {
+            var isAuthorized = await uow.UsersRepository.CheckNameAsync(name);
+            if (!isAuthorized)
+            {
+                return BadRequest("Unauthorized");
+            }
+
+            var userToDelete = await uow.UsersRepository.DeleteAccount(nameToDelete);
+            if (userToDelete != null)
+            {
+                await uow.SaveAsync();
+                return StatusCode(201);
+            }
+            else
+            {
+                return BadRequest("User not exist");
+            }
+        }
+
+
 
     }
 }
